java-plus-graduation recommendations v.17 docker-compose